# App-todos

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_refresh_sessions_table.py  0003_create_tasks_table.py  0004_create_appointments_table.py
backend/app/: logging_config.py  main.py  metrics.py  telemetry.py
backend/app/api/v1/: appointments.py  auth.py  router.py  tasks.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/models/: appointment.py  refresh_session.py  task.py  user.py
backend/app/repositories/: appointments.py  refresh_sessions.py  tasks.py  users.py
backend/app/schemas/: appointment.py  auth.py  task.py
backend/app/security/: deps.py  passwords.py  tokens.py
backend/app/services/: appointments.py  auth.py  tasks.py
backend/tests/: conftest.py  test_appointments.py  test_auth.py  test_logging.py  test_metrics.py  test_tasks.py
docs/: securite-ci.md
docs/adr/: 001-securite-chaine-ci-cd.md  002-observabilite-trois-signaux.md
frontend/: .dockerignore  .gitignore  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: appointments.spec.ts  auth.spec.ts  helpers.ts  reminders.spec.ts  tasks.spec.ts  today.spec.ts
(+33 files in other folders)
